--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,21 +6,51 @@ body {
 
 }
 
-h1 {
+h2 {
+
     padding: 10px;
     text-align: center;
 }
 
 p {
+
     margin-left: 30px; 
+    margin-right: 30px;
 
 }
 
 .bg {
+    /*
     background-image: url("assets/sky.jpg"); 
     height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    */
+    margin-left: 0px;
+    margin-right: 15px;
 
+}
+
+.nav {
+
+
+
+
+}
+
+a.button {
+    color: black;
+    background: linear-gradient(to bottom right, lightblue, rgb(72, 157, 255));
+    border: none;
+    /*border-radius: 40px; */
+    padding: 10px 60px;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 100%;
+    margin: 4px 30px;
+    /*     margin: second one is horizontal spacing*/
+    cursor: pointer;
 }
