--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,13 @@
 body {
 
-    font-family: 'Open Sans', sans-serif;
+    
     width: 100%;
     max-width: 100%;
 
 }
 
 h2 {
-
+    font-family: 'Open Sans', sans-serif;
     padding: 10px;
     text-align: center;
 }
@@ -16,6 +16,7 @@ p {
 
     margin-left: 30px; 
     margin-right: 30px;
+    font-family: 'Helvetica';
 
 }
 
@@ -46,7 +47,7 @@ a.button {
     /*border-radius: 40px; */
     padding: 10px 60px;
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Helvetica';
     text-decoration: none;
     display: inline-block;
     font-size: 100%;
