--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,14 @@
 body {
 
-    
+    background-image: url("assets/background.png");
     width: 100%;
     max-width: 100%;
+    color: whitesmoke; 
 
 }
 
 h2 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Indie Flower', cursive;
     padding: 10px;
     text-align: center;
 }
@@ -16,42 +17,36 @@ p {
 
     margin-left: 30px; 
     margin-right: 30px;
-    font-family: 'Helvetica';
+    font-family: 'Open Sans', sans-serif;
 
 }
 
-.bg {
-    /*
-    background-image: url("assets/sky.jpg"); 
-    height: 100%; 
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    */
-    margin-left: 0px;
-    margin-right: 15px;
+img { 
+    display: block; 
+    margin-left: auto;
+    margin-right: auto; 
+
 
 }
 
-.nav {
+h3 {
 
-
-
-
+    font-family: 'Indie Flower', cursive; 
+    font-size: 150%;
 }
 
 a.button {
-    color: black;
-    background: linear-gradient(to bottom right, lightblue, rgb(72, 157, 255));
+    color: white;
+    background-image: url("assets/buttons.png");
     border: none;
-    /*border-radius: 40px; */
     padding: 10px 60px;
+    border-radius: 30px; 
     text-align: center;
-    font-family: 'Helvetica';
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 200%;
     text-decoration: none;
     display: inline-block;
-    font-size: 100%;
-    margin: 4px 30px;
-    /*     margin: second one is horizontal spacing*/
+    margin: 4px 115px 60px;
+    /* second margin is between buttons, third is underneath */
     cursor: pointer;
 }
