--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,4 @@
 body {
-
     background-image: url("assets/background.png");
     width: 100%;
     max-width: 100%;
@@ -14,7 +13,6 @@ h2 {
 }
 
 p {
-
     margin-left: 30px; 
     margin-right: 30px;
     font-family: 'Open Sans', sans-serif;
@@ -26,11 +24,9 @@ img {
     margin-left: auto;
     margin-right: auto; 
 
-
 }
 
 h3 {
-
     font-family: 'Indie Flower', cursive; 
     font-size: 150%;
 }
@@ -50,3 +46,19 @@ a.button {
     /* second margin is between buttons, third is underneath */
     cursor: pointer;
 }
+
+/* from .noscroll to aria-hidden="false", these functions allow the background image to freeze while the text scrolls*/
+.noscroll { 
+    overflow: hidden;
+
+  }
+  
+.overlay { 
+    position: fixed; 
+    overflow-y: scroll;
+    top: 0; right: 0; bottom: 0; left: 0; 
+
+}
+
+[aria-hidden="true"]  { display: none; }
+[aria-hidden="false"] { display: block; }
